packaje.json modified

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "homepage": "https://alejandro3008.github.io/citas-react-vite/",
+  "homepage": "https://Alejandro3008.github.io/citas-react-vite/",
   "dependencies": {
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
